--- a/manifest.json
+++ b/manifest.json
@@ -5,21 +5,14 @@
   "description": "Inject Yelp ratings into MealPal",
   "homepage_url": "https://github.com/muesugi/yelp-mealpal",
   "icons": {
-    "16": "icons/icon16.png",
-    "48": "icons/icon48.png",
-    "128": "icons/icon128.png"
+    "16": "icons/Yelp16.png",
+    "48": "icons/Yelp48.png",
+    "128": "icons/Yelp128.png"
   },
   "default_locale": "en",
-  "background": {
-    "scripts": [
-      "src/bg/background.js"
-    ],
-    "persistent": false
-  },
   "page_action": {
-    "default_icon": "icons/icon19.png",
-    "default_title": "page action demo",
-    "default_popup": "src/page_action/page_action.html"
+    "default_icon": "icons/Yelp19.png",
+    "default_title": "Yelp for MealPal"
   },
   "permissions": [
     "http://api.yelp.com/v3/*",
