--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "Yelp for MealPal",
   "version": "0.0.1",
   "manifest_version": 2,
-  "description": "Inject Yelp ratings into MealPal",
+  "description": "Automatically show Yelp ratings alongside meals on the MealPal lunches page.",
   "homepage_url": "https://github.com/muesugi/yelp-mealpal",
   "icons": {
     "16": "icons/Yelp16.png",
